clusters/production/apps/postgres-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-test
  labels:
    app.kubernetes.io/part-of: postgres-test
