clusters/production/apps/postgres-test/oauth2-proxy-adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-adminer
  namespace: postgres-test
spec:
  type: ClusterIP
  selector:
    app: oauth2-proxy-adminer
  ports:
  - name: http
    port: 4180
    targetPort: http
    protocol: TCP
